--- a/ProjectManagmentSystem/package.json
+++ b/ProjectManagmentSystem/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/inter": "^5.0.18",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
