--- a/ProjectManagmentSystem/package.json
+++ b/ProjectManagmentSystem/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
