--- a/ProjectManagmentSystem/package.json
+++ b/ProjectManagmentSystem/package.json
@@ -14,7 +14,6 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
     "@fortawesome/fontawesome-free": "^6.5.2",
-    "@mui/material": "^5.15.17",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
@@ -24,6 +23,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-icons-kit": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
