--- a/ProjectManagmentSystem/package.json
+++ b/ProjectManagmentSystem/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.51.4",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
